<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/getLastMeasurementRecordLayout"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/measurementTypeTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/measurement_type" />

    <TextView
        android:id="@+id/measurementType"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/measurementDateTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/measurement_date" />

    <TextView
        android:id="@+id/measurementDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <!-- BG -->

    <LinearLayout
        android:id="@+id/bgLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="gone" >

        <TextView
            android:id="@+id/bgValueTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bg_value" />

        <TextView
            android:id="@+id/bgValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge" />
    </LinearLayout>

    <!-- BP -->

    <LinearLayout
        android:id="@+id/bpLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="gone" >

        <TextView
            android:id="@+id/sysValueTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sys_value" />

        <TextView
            android:id="@+id/sysValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <TextView
            android:id="@+id/diaValueTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dia_value" />

        <TextView
            android:id="@+id/diaValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <TextView
            android:id="@+id/pulseValueTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pul_value" />

        <TextView
            android:id="@+id/pulseValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge" />
        
        <TextView
            android:id="@+id/ihbValueTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ihb_value" />
        
        <TextView
            android:id="@+id/ihbValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge" />
        
    </LinearLayout>

    <!-- thermometer -->

    <LinearLayout
        android:id="@+id/thermometerLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="gone" >

        <TextView
            android:id="@+id/thermometerValueTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/thermometer_value" />

        <TextView
            android:id="@+id/thermometerValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge" />
    </LinearLayout>

    <!-- thermometer -->

    <LinearLayout
        android:id="@+id/weightScaleLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="gone" >

        <TextView
            android:id="@+id/genderTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/gender_value" />

        <TextView
            android:id="@+id/genderValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <TextView
            android:id="@+id/ageTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/age_value" />

        <TextView
            android:id="@+id/ageValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <TextView
            android:id="@+id/heightTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/height_value" />

        <TextView
            android:id="@+id/heightValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <TextView
            android:id="@+id/weightTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/weight_value" />

        <TextView
            android:id="@+id/weightValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <TextView
            android:id="@+id/bmiTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bmi_value" />

        <TextView
            android:id="@+id/bmiValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <TextView
            android:id="@+id/bmrTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bmr_value" />

        <TextView
            android:id="@+id/bmrValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <TextView
            android:id="@+id/bfTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bf_value" />

        <TextView
            android:id="@+id/bfValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge" />
    </LinearLayout>
    
    <!-- thermometer -->

    <LinearLayout
        android:id="@+id/spO2Layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="gone" >

        <TextView
            android:id="@+id/spO2Title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/spO2_value" />

        <TextView
            android:id="@+id/spO2Value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge" />
        
        <TextView
            android:id="@+id/spO2PulseTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pul_value" />

        <TextView
            android:id="@+id/spO2PulseValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge" />
    </LinearLayout>

</LinearLayout>