<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/plan_trend_bottom" >

    <!-- Top button bar background -->
    
    <ImageView
        android:id="@+id/iv_title"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@drawable/pair_block01"
        android:contentDescription="@string/cd_image" />
    
    <RelativeLayout
        android:id="@+id/top_button_bar_background"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/iv_title"
        android:layout_alignBottom="@+id/iv_title"
        android:paddingTop="4dp"
        android:paddingBottom="4dp"
        android:paddingLeft="8dp"
        android:paddingRight="8dp"
        android:contentDescription="@string/cd_image" >
    
	    <!-- Title -->
	
	    <TextView
	        android:id="@+id/tv_title"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_centerInParent="true"
	        android:gravity="center"
	        android:text="@string/setting_home_meter"
	        android:textColor="@android:color/black"
	        android:textSize="20sp" />
	
	    <ImageButton
	        android:id="@+id/btn_back"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_alignParentRight="true"
	        android:layout_centerVertical="true"
	        android:background="@android:color/transparent"
	        android:contentDescription="@string/cd_image"
	        android:src="@drawable/button_pair_back" />
    
    </RelativeLayout>
    
    <RelativeLayout
        android:id="@+id/search_background"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_below="@+id/top_button_bar_background"
        android:layout_marginBottom="8dp"
        android:padding="8dp"
        android:gravity="center"
        android:background="@drawable/pair_block05" >
	    
        <TextView
            android:id="@+id/tv_meter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:text="@string/setting_current_ble_meter"
            android:textColor="@android:color/white"
            android:textSize="16sp" />
        
        <ProgressBar
	        android:id="@+id/pb_search"
	        android:layout_width="30dp"
	        android:layout_height="30dp"
	        android:layout_toRightOf="@+id/tv_meter"
	        android:layout_marginRight="8dp"
	        android:layout_centerVertical="true"
	        android:visibility="invisible" />
        
        <RelativeLayout
	        android:id="@+id/rl_search"
	        android:layout_width="100dp"
	        android:layout_height="40dp"
	        android:layout_alignParentRight="true"
	        android:layout_centerVertical="true"
	        android:gravity="center"
	        android:contentDescription="@string/cd_image" >
        
            <Button
		        android:id="@+id/btn_search"
		        android:layout_width="match_parent"
		        android:layout_height="match_parent"
		        android:layout_alignParentRight="true"
		        android:layout_centerVertical="true"
		        android:paddingLeft="8dp"
		        android:gravity="center"
		        android:tag="0"
		        android:text="@string/meter_search"
	        	android:textColor="@android:color/black"		        
		        android:background="@drawable/button_pair_search_bg"
		        android:drawablePadding="8dp"
		        android:drawableLeft="@drawable/button_pair_search" />
	    </RelativeLayout>
	</RelativeLayout>
	
    <LinearLayout
        android:id="@+id/meter_background"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/search_background"
        android:gravity="center|left"
		android:orientation="vertical" >
        
        <LinearLayout
	        android:id="@+id/lv_background"
	        android:layout_width="match_parent"
	        android:layout_height="45dp"
	        android:padding="4dp"
			android:orientation="vertical" >
        
	        <ListView
		        android:id="@+id/lv_content"
		        android:layout_width="match_parent"
		        android:layout_height="match_parent"
		        android:choiceMode="singleChoice"
		        android:background="@android:color/transparent" />
        </LinearLayout>
	</LinearLayout>
</RelativeLayout>